--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
+</head>
+
+<body>
+    <div id="container">
+        <canvas id="stage" width="300" height="300"></canvas>
+        <a id="logo" href="http://www.pixijs.com"><img src="images/pixijs-logo.png"></a>
+    </div>
     <script type="module" src="/src/main.ts"></script>
-  </body>
+
+</body>
+
 </html>
