drag and drop , no png allowed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id="container">
         <canvas id="stage" width="300" height="300"></canvas>
         <a id="logo" href="http://www.pixijs.com"><img src="images/pixijs-logo.png"></a>
+        <!-- <input id="file" type="file" /> -->
+        <div class="drag-enter">+</div>
     </div>
     <script type="module" src="/src/main.ts"></script>
 
