animation toggle works, top left + to add asset

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <div id="container">
         <canvas id="stage" width="300" height="300"></canvas>
         <a id="logo" href="http://www.pixijs.com"><img src="images/pixijs-logo.png"></a>
-        <!-- <input id="file" type="file" /> -->
         <div class="drag-enter">+</div>
+        <div id="add-another">add another</div>
+        <!-- <input id="file" type="file" /> -->
     </div>
     <script type="module" src="/src/main.ts"></script>
 
