file input for file drops!

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <div id="container">
         <canvas id="stage" width="300" height="300"></canvas>
         <a id="logo" href="http://www.pixijs.com"><img src="images/pixijs-logo.png"></a>
-        <div class="drag-enter">+</div>
+        <div class="drag-enter">
+            +
+            <input type="file" accept="image/png, image/jpeg, .zip">
+        </div>
         <div id="add-another">add another</div>
         <!-- <input id="file" type="file" /> -->
     </div>
