--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             +
             <input type="file" accept="image/png, image/jpeg, .zip">
         </div>
+        <div id="fps">??? frames per second</div>
         <div id="add-another">add another</div>
         <!-- <input id="file" type="file" /> -->
     </div>
